connect to mongo with ssl

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-DB_URL=''
-PORT=
+DB_URL='mongodb://username:password@host1:port1/defaultauthdb?ssl=true'
+PORT=7000
 BASE_URL=''
-HASH_SECRET=''
-JWT_ACCESS_TOKEN_SECRET=''
-JWT_REFRESH_TOKEN_SECRET=''
+HASH_SECRET='sW4M3er3LdAXgNR7dl3PhN1nJ9Ql85Jk'
+JWT_ACCESS_TOKEN_SECRET='lzjXgTN1XW49fUdJ9O7EKBhOlOhWWyjU'
+JWT_REFRESH_TOKEN_SECRET='5LkmgU3eZESXcg9lvVcm0jPmW0UU7hjJ'
 SMS_SID=''
 SMS_AUTH_TOKEN=''
 SMS_FROM_NUMBER=''
