remove ssl config to avoid errors

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DB_URL='mongodb://username:password@host1:port1/defaultauthdb?ssl=true'
+DB_URL='mongodb://username:password@host1:port1/defaultauthdb'
 PORT=7000
 BASE_URL=''
 HASH_SECRET='sW4M3er3LdAXgNR7dl3PhN1nJ9Ql85Jk'
